[package]
name = "hapi-near-connector"
authors = ["HAPI"]
version = "0.2.1"
edition = "2021"
description = """
Rust library for using HAPI protocol in cmart contracts on NEAR.
"""
readme = "README.md"
categories = ["wasm"]
license-file = "LICENSE"
repository = "https://github.com/HAPIprotocol/hapi-near-connector"
homepage = "https://hapi.one"
documentation = "https://hapi-one.gitbook.io/"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
near-sdk = "4.0.0"
near-contract-standards = "4.0.0"
serde = "1"
